// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PrivacyPage スナップショット デスクトップ表示のスナップショット 1`] = `
<div
  class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
>
  <div
    class="MuiBox-root css-hr01ig"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter MuiTypography-gutterBottom css-1x6g1an-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      プライバシーポリシー
    </h3>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignCenter MuiTypography-gutterBottom css-a81oqr-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Angori（アンゴリ）個人情報保護方針
    </h6>
    <span
      class="MuiTypography-root MuiTypography-caption MuiTypography-alignRight css-16dt7zz-MuiTypography-root"
      style="--Typography-textAlign: right;"
    >
      最終更新日：2025年8月11日
    </span>
    <div
      class="MuiBox-root css-1yjvs5a"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第1条（収集する情報）
      </h6>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        1.1 利用者が提供する情報
      </h6>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          <strong>
            アカウント情報
          </strong>
          : メールアドレス、パスワード（暗号化保存）
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          <strong>
            感情記録データ
          </strong>
          :
          <ul
            class="MuiBox-root css-b93pfh"
          >
            <li
              class="MuiTypography-root MuiTypography-body1 css-1lair6c-MuiTypography-root"
            >
              怒りレベル（1-10段階）
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-1lair6c-MuiTypography-root"
            >
              発生日時、場所
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-1lair6c-MuiTypography-root"
            >
              状況の詳細
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-1lair6c-MuiTypography-root"
            >
              トリガー情報
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-1lair6c-MuiTypography-root"
            >
              感情の種類
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-1lair6c-MuiTypography-root"
            >
              継続時間
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-1lair6c-MuiTypography-root"
            >
              振り返り内容
            </li>
          </ul>
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          <strong>
            AI相談データ
          </strong>
          : GPT-4との対話内容
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          <strong>
            任意提供情報
          </strong>
          : お問い合わせ内容
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        1.2 自動的に収集される情報
      </h6>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          <strong>
            利用状況
          </strong>
          : ログイン日時、機能利用履歴
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          <strong>
            ゲーム情報
          </strong>
          : 落ち着きポイント、レベル、連続記録日数
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          <strong>
            技術情報
          </strong>
          : IPアドレス、ブラウザ情報、アクセス日時
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        1.3 外部サービス連携情報
      </h6>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          <strong>
            Googleアカウント
          </strong>
          : Googleログイン利用時のプロフィール情報（名前、メールアドレス）
        </li>
      </ul>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1ujl41g"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第2条（利用目的）
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        収集した個人情報は以下の目的で利用します：
      </p>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        2.1 サービス提供目的
      </h6>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          アンガーマネジメント機能の提供
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          AI相談機能でのアドバイス生成
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          過去データの管理・表示
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          ゲーミフィケーション機能の提供
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        2.2 サービス改善目的
      </h6>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          利用状況の分析（統計データとして匿名化）
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          新機能の開発・改善
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          ユーザー体験の向上
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        2.3 運営目的
      </h6>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          本人確認・認証
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          お問い合わせ対応
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          規約違反の調査・対応
        </li>
      </ul>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1ujl41g"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第3条（第三者提供）
      </h6>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        3.1 提供する場合
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        個人情報は、以下の場合を除き第三者に提供しません：
      </p>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          利用者の同意がある場合
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          法令に基づく場合
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          人の生命・身体の保護のため緊急に必要な場合
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        3.2 外部サービス利用
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        以下の外部サービスを利用しており、それぞれのプライバシーポリシーが適用されます：
      </p>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          <strong>
            OpenAI
          </strong>
          : AI相談機能でのGPT-4 API利用
          <br />
          <span
            class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
          >
            相談内容がOpenAIに送信されます
            <br />
            OpenAIのプライバシーポリシー: https://openai.com/privacy
          </span>
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          <strong>
            Google
          </strong>
          : 認証サービス利用時
          <br />
          <span
            class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
          >
            Googleアカウント情報の連携
            <br />
            Googleプライバシーポリシー: https://policies.google.com/privacy
          </span>
        </li>
      </ul>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1ujl41g"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第4条（利用者の権利）
      </h6>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        4.1 開示・訂正・削除
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        利用者は以下の権利を有します：
      </p>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          個人情報の開示請求
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          個人情報の訂正・削除請求
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          利用停止請求
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        4.2 データポータビリティ
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        利用者は、自身の感情記録データのエクスポートを要求できます。
      </p>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        4.3 権利行使方法
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        上記権利の行使は、サービス内の設定画面または運営者への直接連絡により行えます。
      </p>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1ujl41g"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第5条（Cookieの利用）
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        本サービスでは、利用者の利便性向上のためCookieを使用します：
      </p>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          <strong>
            認証Cookie
          </strong>
          : ログイン状態の維持
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          <strong>
            設定Cookie
          </strong>
          : ユーザー設定の保存
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          <strong>
            分析Cookie
          </strong>
          : サービス改善のための利用状況分析（将来的実装予定）
        </li>
      </ul>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1ujl41g"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第6条（お問い合わせ窓口）
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        個人情報の取り扱いに関するお問い合わせは、以下までご連絡ください：
      </p>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-e7whih-MuiTypography-root"
        >
          GitHub Issues: https://github.com/yoshihama-nineball/Angori/issues
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-w6zn47-MuiTypography-root"
        >
          GitHub Discussions: https://github.com/yoshihama-nineball/Angori/discussions
        </li>
      </ul>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1ujl41g"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第7条（ポリシー変更）
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-1822gya-MuiTypography-root"
      >
        本ポリシーを変更する場合は、サービス内での通知により利用者にお知らせします。重要な変更の場合は、30日前に事前通知を行います。
      </p>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-19hjaog"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        以上
      </h6>
    </div>
  </div>
</div>
`;

exports[`PrivacyPage スナップショット モバイル表示のスナップショット 1`] = `
<div
  class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
>
  <div
    class="MuiBox-root css-mjemct"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-1tch7cl-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      プライバシーポリシー
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignCenter MuiTypography-gutterBottom css-g4pvl8-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Angori（アンゴリ）個人情報保護方針
    </h6>
    <span
      class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter css-1bw342z-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      最終更新日：2025年8月11日
    </span>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第1条（収集する情報）
      </h6>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        1.1 利用者が提供する情報
      </h6>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          <strong>
            アカウント情報
          </strong>
          : メールアドレス、パスワード（暗号化保存）
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          <strong>
            感情記録データ
          </strong>
          :
          <ul
            class="MuiBox-root css-b93pfh"
          >
            <li
              class="MuiTypography-root MuiTypography-body1 css-18hoguh-MuiTypography-root"
            >
              怒りレベル（1-10段階）
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-18hoguh-MuiTypography-root"
            >
              発生日時、場所
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-18hoguh-MuiTypography-root"
            >
              状況の詳細
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-18hoguh-MuiTypography-root"
            >
              トリガー情報
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-18hoguh-MuiTypography-root"
            >
              感情の種類
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-18hoguh-MuiTypography-root"
            >
              継続時間
            </li>
            <li
              class="MuiTypography-root MuiTypography-body1 css-18hoguh-MuiTypography-root"
            >
              振り返り内容
            </li>
          </ul>
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          <strong>
            AI相談データ
          </strong>
          : GPT-4との対話内容
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          <strong>
            任意提供情報
          </strong>
          : お問い合わせ内容
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        1.2 自動的に収集される情報
      </h6>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          <strong>
            利用状況
          </strong>
          : ログイン日時、機能利用履歴
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          <strong>
            ゲーム情報
          </strong>
          : 落ち着きポイント、レベル、連続記録日数
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          <strong>
            技術情報
          </strong>
          : IPアドレス、ブラウザ情報、アクセス日時
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        1.3 外部サービス連携情報
      </h6>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          <strong>
            Googleアカウント
          </strong>
          : Googleログイン利用時のプロフィール情報（名前、メールアドレス）
        </li>
      </ul>
    </div>
    <div
      class="MuiBox-root css-5vb4lz"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第2条（利用目的）
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        収集した個人情報は以下の目的で利用します：
      </p>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        2.1 サービス提供目的
      </h6>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          アンガーマネジメント機能の提供
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          AI相談機能でのアドバイス生成
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          過去データの管理・表示
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          ゲーミフィケーション機能の提供
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        2.2 サービス改善目的
      </h6>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          利用状況の分析（統計データとして匿名化）
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          新機能の開発・改善
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          ユーザー体験の向上
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        2.3 運営目的
      </h6>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          本人確認・認証
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          お問い合わせ対応
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          規約違反の調査・対応
        </li>
      </ul>
    </div>
    <div
      class="MuiBox-root css-5vb4lz"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第3条（第三者提供）
      </h6>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        3.1 提供する場合
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        個人情報は、以下の場合を除き第三者に提供しません：
      </p>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          利用者の同意がある場合
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          法令に基づく場合
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          人の生命・身体の保護のため緊急に必要な場合
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        3.2 外部サービス利用
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        以下の外部サービスを利用しており、それぞれのプライバシーポリシーが適用されます：
      </p>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          <strong>
            OpenAI
          </strong>
          : AI相談機能でのGPT-4 API利用
          <br />
          <span
            class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
          >
            相談内容がOpenAIに送信されます
            <br />
            OpenAIのプライバシーポリシー: https://openai.com/privacy
          </span>
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          <strong>
            Google
          </strong>
          : 認証サービス利用時
          <br />
          <span
            class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
          >
            Googleアカウント情報の連携
            <br />
            Googleプライバシーポリシー: https://policies.google.com/privacy
          </span>
        </li>
      </ul>
    </div>
    <div
      class="MuiBox-root css-5vb4lz"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第4条（利用者の権利）
      </h6>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        4.1 開示・訂正・削除
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        利用者は以下の権利を有します：
      </p>
      <ul
        class="MuiBox-root css-iy1l79"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          個人情報の開示請求
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          個人情報の訂正・削除請求
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          利用停止請求
        </li>
      </ul>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        4.2 データポータビリティ
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        利用者は、自身の感情記録データのエクスポートを要求できます。
      </p>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-12l6h8e-MuiTypography-root"
      >
        4.3 権利行使方法
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        上記権利の行使は、サービス内の設定画面または運営者への直接連絡により行えます。
      </p>
    </div>
    <div
      class="MuiBox-root css-5vb4lz"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第5条（Cookieの利用）
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        本サービスでは、利用者の利便性向上のためCookieを使用します：
      </p>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          <strong>
            認証Cookie
          </strong>
          : ログイン状態の維持
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          <strong>
            設定Cookie
          </strong>
          : ユーザー設定の保存
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          <strong>
            分析Cookie
          </strong>
          : サービス改善のための利用状況分析（将来的実装予定）
        </li>
      </ul>
    </div>
    <div
      class="MuiBox-root css-5vb4lz"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第6条（お問い合わせ窓口）
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        個人情報の取り扱いに関するお問い合わせは、以下までご連絡ください：
      </p>
      <ul
        class="MuiBox-root css-n085mf"
      >
        <li
          class="MuiTypography-root MuiTypography-body1 css-1a6x0pn-MuiTypography-root"
        >
          GitHub Issues: https://github.com/yoshihama-nineball/Angori/issues
        </li>
        <li
          class="MuiTypography-root MuiTypography-body1 css-pjzxq1-MuiTypography-root"
        >
          GitHub Discussions: https://github.com/yoshihama-nineball/Angori/discussions
        </li>
      </ul>
    </div>
    <div
      class="MuiBox-root css-5vb4lz"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        第7条（ポリシー変更）
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-gy9ob4-MuiTypography-root"
      >
        本ポリシーを変更する場合は、サービス内での通知により利用者にお知らせします。重要な変更の場合は、30日前に事前通知を行います。
      </p>
    </div>
    <div
      class="MuiBox-root css-esl8o0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        以上
      </h6>
    </div>
  </div>
</div>
`;
